中文翻译1：主要物品名称

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -13,7 +13,7 @@
 	"block.create.andesite_encased_large_cogwheel": "安山大齿轮箱",
 	"block.create.andesite_encased_shaft": "安山传动杆箱",
 	"block.create.andesite_funnel": "安山岩漏斗",
-	"block.create.andesite_ladder": "UNLOCALIZED: Andesite Ladder",
+	"block.create.andesite_ladder": "安山梯子",
 	"block.create.andesite_pillar": "安山岩柱",
 	"block.create.andesite_tunnel": "安山岩隧道",
 	"block.create.asurine": "皓蓝石",
@@ -40,7 +40,7 @@
 	"block.create.brass_encased_large_cogwheel": "黄铜大齿轮箱",
 	"block.create.brass_encased_shaft": "黄铜传动杆箱",
 	"block.create.brass_funnel": "黄铜漏斗",
-	"block.create.brass_ladder": "UNLOCALIZED: Brass Ladder",
+	"block.create.brass_ladder": "黄铜梯子",
 	"block.create.brass_tunnel": "黄铜隧道",
 	"block.create.brown_nixie_tube": "棕色辉光管",
 	"block.create.brown_sail": "棕色风帆",
@@ -56,10 +56,10 @@
 	"block.create.cogwheel": "齿轮",
 	"block.create.content_observer": "物品侦测器",
 	"block.create.controller_rail": "控制铁轨",
-	"block.create.controls": "UNLOCALIZED: Train Controls",
+	"block.create.controls": "列车控制器",
 	"block.create.copper_backtank": "铜背罐",
 	"block.create.copper_casing": "铜机壳",
-	"block.create.copper_ladder": "UNLOCALIZED: Copper Ladder",
+	"block.create.copper_ladder": "铜梯子",
 	"block.create.copper_shingle_slab": "铜砖瓦台阶",
 	"block.create.copper_shingle_stairs": "铜砖瓦楼梯",
 	"block.create.copper_shingles": "铜砖瓦",
@@ -201,8 +201,8 @@
 	"block.create.deployer": "机械手",
 	"block.create.depot": "置物台",
 	"block.create.diorite_pillar": "闪长岩柱",
-	"block.create.display_board": "UNLOCALIZED: Display Board",
-	"block.create.display_link": "UNLOCALIZED: Display Link",
+	"block.create.display_board": "显示板",
+	"block.create.display_link": "显示链接器",
 	"block.create.dripstone_pillar": "滴水石柱",
 	"block.create.encased_chain_drive": "链式传动箱",
 	"block.create.encased_fan": "鼓风机",
@@ -219,9 +219,9 @@
 	"block.create.fluid_valve": "流体阀门",
 	"block.create.flywheel": "飞轮",
 	"block.create.framed_glass": "边框玻璃",
-	"block.create.framed_glass_door": "UNLOCALIZED: Framed Glass Door",
+	"block.create.framed_glass_door": "边框玻璃门",
 	"block.create.framed_glass_pane": "边框玻璃板",
-	"block.create.framed_glass_trapdoor": "UNLOCALIZED: Framed Glass Trapdoor",
+	"block.create.framed_glass_trapdoor": "边框玻璃活板门",
 	"block.create.gantry_carriage": "起重机取物器",
 	"block.create.gantry_shaft": "起重机杆",
 	"block.create.gearbox": "十字齿轮箱",
@@ -302,8 +302,8 @@
 	"block.create.mechanical_pump": "动力泵",
 	"block.create.mechanical_saw": "动力锯",
 	"block.create.metal_bracket": "金属支架",
-	"block.create.metal_girder": "UNLOCALIZED: Metal Girder",
-	"block.create.metal_girder_encased_shaft": "UNLOCALIZED: Metal Girder Encased Shaft",
+	"block.create.metal_girder": "金属梁",
+	"block.create.metal_girder_encased_shaft": "金属梁传动杆箱",
 	"block.create.millstone": "石磨",
 	"block.create.minecart_anchor": "矿车锚",
 	"block.create.mysterious_cuckoo_clock": "布谷鸟闹钟",
@@ -332,7 +332,7 @@
 	"block.create.pink_toolbox": "粉红色工具箱",
 	"block.create.pink_valve_handle": "粉红色阀门手轮",
 	"block.create.piston_extension_pole": "活塞杆",
-	"block.create.placard": "UNLOCALIZED: Placard",
+	"block.create.placard": "标语牌",
 	"block.create.polished_cut_andesite": "磨制切制安山岩",
 	"block.create.polished_cut_andesite_slab": "磨制切制安山岩台阶",
 	"block.create.polished_cut_andesite_stairs": "磨制切制安山岩楼梯",
@@ -403,7 +403,7 @@
 	"block.create.purple_toolbox": "紫色工具箱",
 	"block.create.purple_valve_handle": "紫色阀门手轮",
 	"block.create.radial_chassis": "旋转底盘",
-	"block.create.railway_casing": "UNLOCALIZED: Train Casing",
+	"block.create.railway_casing": "列车外壳",
 	"block.create.raw_zinc_block": "粗锌块",
 	"block.create.red_nixie_tube": "红色辉光管",
 	"block.create.red_sail": "红色风帆",
@@ -415,9 +415,9 @@
 	"block.create.refined_radiance_casing": "光辉机壳",
 	"block.create.rope": "绳索",
 	"block.create.rope_pulley": "绳索滑轮",
-	"block.create.rose_quartz_block": "UNLOCALIZED: Block of Rose Quartz",
-	"block.create.rose_quartz_lamp": "UNLOCALIZED: Rose Quartz Lamp",
-	"block.create.rose_quartz_tiles": "UNLOCALIZED: Rose Quartz Tiles",
+	"block.create.rose_quartz_block": "玫瑰石英块",
+	"block.create.rose_quartz_lamp": "玫瑰石英灯",
+	"block.create.rose_quartz_tiles": "玫瑰石英砖块",
 	"block.create.rotation_speed_controller": "转速控制器",
 	"block.create.sail_frame": "风帆框架",
 	"block.create.schematic_table": "蓝图桌",
@@ -471,7 +471,7 @@
 	"block.create.small_ochrum_brick_stairs": "赭金砂小砖块楼梯",
 	"block.create.small_ochrum_brick_wall": "赭金砂小砖块墙",
 	"block.create.small_ochrum_bricks": "赭金砂小砖块",
-	"block.create.small_rose_quartz_tiles": "UNLOCALIZED: Small Rose Quartz Tiles",
+	"block.create.small_rose_quartz_tiles": "玫瑰石英小砖块",
 	"block.create.small_scorchia_brick_slab": "焦黑熔渣小砖块台阶",
 	"block.create.small_scorchia_brick_stairs": "焦黑熔渣小砖块楼梯",
 	"block.create.small_scorchia_brick_wall": "焦黑熔渣小砖块墙",
@@ -494,21 +494,21 @@
 	"block.create.spout": "注液器",
 	"block.create.spruce_window": "云杉木窗户",
 	"block.create.spruce_window_pane": "云杉木窗户板",
-	"block.create.steam_engine": "UNLOCALIZED: Steam Engine",
-	"block.create.steam_whistle": "UNLOCALIZED: Steam Whistle",
-	"block.create.steam_whistle_extension": "UNLOCALIZED: Steam Whistle Extension",
+	"block.create.steam_engine": "蒸汽引擎",
+	"block.create.steam_whistle": "蒸汽笛",
+	"block.create.steam_whistle_extension": "蒸汽笛加长段",
 	"block.create.sticker": "黏着器",
 	"block.create.sticky_mechanical_piston": "黏性动力活塞",
 	"block.create.stockpile_switch": "存量转信器",
 	"block.create.stressometer": "应力表",
 	"block.create.tiled_glass": "十字玻璃窗",
 	"block.create.tiled_glass_pane": "十字玻璃窗户板",
-	"block.create.track": "UNLOCALIZED: Train Track",
-	"block.create.track_observer": "UNLOCALIZED: Train Observer",
-	"block.create.track_signal": "UNLOCALIZED: Train Signal",
-	"block.create.track_station": "UNLOCALIZED: Train Station",
-	"block.create.train_door": "UNLOCALIZED: Train Door",
-	"block.create.train_trapdoor": "UNLOCALIZED: Train Trapdoor",
+	"block.create.track": "列车轨道",
+	"block.create.track_observer": "列车侦测器",
+	"block.create.track_signal": "列车信号机",
+	"block.create.track_station": "列车站",
+	"block.create.train_door": "列车门",
+	"block.create.train_trapdoor": "列车活板门",
 	"block.create.tuff_pillar": "凝灰岩柱",
 	"block.create.turntable": "转盘",
 	"block.create.veridium": "辉绿矿",
@@ -646,15 +646,15 @@
 	"item.create.refined_radiance": "光辉石",
 	"item.create.rose_quartz": "玫瑰石英",
 	"item.create.sand_paper": "砂纸",
-	"item.create.schedule": "UNLOCALIZED: Train Schedule",
+	"item.create.schedule": "列车时刻表",
 	"item.create.schematic": "蓝图",
 	"item.create.schematic_and_quill": "蓝图与笔",
 	"item.create.shadow_steel": "暗影钢",
-	"item.create.sturdy_sheet": "UNLOCALIZED: Sturdy Sheet",
+	"item.create.sturdy_sheet": "坚固薄板",
 	"item.create.super_glue": "强力胶",
 	"item.create.sweet_roll": "甜甜卷",
 	"item.create.tree_fertilizer": "树木肥料",
-	"item.create.unprocessed_obsidian_sheet": "UNLOCALIZED: Unprocessed Obsidian Sheet",
+	"item.create.unprocessed_obsidian_sheet": "未加工的黑曜石板",
 	"item.create.vertical_gearbox": "竖直十字齿轮箱",
 	"item.create.wand_of_symmetry": "对称之杖",
 	"item.create.wheat_flour": "小麦粉",
