--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -13,7 +13,7 @@
 	"block.create.andesite_encased_large_cogwheel": "安山大齿轮箱",
 	"block.create.andesite_encased_shaft": "安山传动杆箱",
 	"block.create.andesite_funnel": "安山岩漏斗",
-	"block.create.andesite_ladder": "UNLOCALIZED: Andesite Ladder",
+	"block.create.andesite_ladder": "安山梯子",
 	"block.create.andesite_pillar": "安山岩柱",
 	"block.create.andesite_tunnel": "安山岩隧道",
 	"block.create.asurine": "皓蓝石",
@@ -40,7 +40,7 @@
 	"block.create.brass_encased_large_cogwheel": "黄铜大齿轮箱",
 	"block.create.brass_encased_shaft": "黄铜传动杆箱",
 	"block.create.brass_funnel": "黄铜漏斗",
-	"block.create.brass_ladder": "UNLOCALIZED: Brass Ladder",
+	"block.create.brass_ladder": "黄铜梯子",
 	"block.create.brass_tunnel": "黄铜隧道",
 	"block.create.brown_nixie_tube": "棕色辉光管",
 	"block.create.brown_sail": "棕色风帆",
@@ -59,7 +59,7 @@
 	"block.create.controls": "UNLOCALIZED: Train Controls",
 	"block.create.copper_backtank": "铜背罐",
 	"block.create.copper_casing": "铜机壳",
-	"block.create.copper_ladder": "UNLOCALIZED: Copper Ladder",
+	"block.create.copper_ladder": "铜梯子",
 	"block.create.copper_shingle_slab": "铜砖瓦台阶",
 	"block.create.copper_shingle_stairs": "铜砖瓦楼梯",
 	"block.create.copper_shingles": "铜砖瓦",
@@ -219,9 +219,9 @@
 	"block.create.fluid_valve": "流体阀门",
 	"block.create.flywheel": "飞轮",
 	"block.create.framed_glass": "边框玻璃",
-	"block.create.framed_glass_door": "UNLOCALIZED: Framed Glass Door",
+	"block.create.framed_glass_door": "边框玻璃门",
 	"block.create.framed_glass_pane": "边框玻璃板",
-	"block.create.framed_glass_trapdoor": "UNLOCALIZED: Framed Glass Trapdoor",
+	"block.create.framed_glass_trapdoor": "边框玻璃活板门",
 	"block.create.gantry_carriage": "起重机取物器",
 	"block.create.gantry_shaft": "起重机杆",
 	"block.create.gearbox": "十字齿轮箱",
@@ -302,7 +302,7 @@
 	"block.create.mechanical_pump": "动力泵",
 	"block.create.mechanical_saw": "动力锯",
 	"block.create.metal_bracket": "金属支架",
-	"block.create.metal_girder": "UNLOCALIZED: Metal Girder",
+	"block.create.metal_girder": "金属梁柱",
 	"block.create.metal_girder_encased_shaft": "UNLOCALIZED: Metal Girder Encased Shaft",
 	"block.create.millstone": "石磨",
 	"block.create.minecart_anchor": "矿车锚",
@@ -415,9 +415,9 @@
 	"block.create.refined_radiance_casing": "光辉机壳",
 	"block.create.rope": "绳索",
 	"block.create.rope_pulley": "绳索滑轮",
-	"block.create.rose_quartz_block": "UNLOCALIZED: Block of Rose Quartz",
-	"block.create.rose_quartz_lamp": "UNLOCALIZED: Rose Quartz Lamp",
-	"block.create.rose_quartz_tiles": "UNLOCALIZED: Rose Quartz Tiles",
+	"block.create.rose_quartz_block": "玫瑰石英块",
+	"block.create.rose_quartz_lamp": "玫瑰石英灯",
+	"block.create.rose_quartz_tiles": "玫瑰石英砖块",
 	"block.create.rotation_speed_controller": "转速控制器",
 	"block.create.sail_frame": "风帆框架",
 	"block.create.schematic_table": "蓝图桌",
@@ -471,7 +471,7 @@
 	"block.create.small_ochrum_brick_stairs": "赭金砂小砖块楼梯",
 	"block.create.small_ochrum_brick_wall": "赭金砂小砖块墙",
 	"block.create.small_ochrum_bricks": "赭金砂小砖块",
-	"block.create.small_rose_quartz_tiles": "UNLOCALIZED: Small Rose Quartz Tiles",
+	"block.create.small_rose_quartz_tiles": "玫瑰石英小砖块",
 	"block.create.small_scorchia_brick_slab": "焦黑熔渣小砖块台阶",
 	"block.create.small_scorchia_brick_stairs": "焦黑熔渣小砖块楼梯",
 	"block.create.small_scorchia_brick_wall": "焦黑熔渣小砖块墙",
@@ -494,21 +494,21 @@
 	"block.create.spout": "注液器",
 	"block.create.spruce_window": "云杉木窗户",
 	"block.create.spruce_window_pane": "云杉木窗户板",
-	"block.create.steam_engine": "UNLOCALIZED: Steam Engine",
-	"block.create.steam_whistle": "UNLOCALIZED: Steam Whistle",
-	"block.create.steam_whistle_extension": "UNLOCALIZED: Steam Whistle Extension",
+	"block.create.steam_engine": "蒸汽引擎",
+	"block.create.steam_whistle": "蒸汽哨",
+	"block.create.steam_whistle_extension": "延展蒸汽哨",
 	"block.create.sticker": "黏着器",
 	"block.create.sticky_mechanical_piston": "黏性动力活塞",
 	"block.create.stockpile_switch": "存量转信器",
 	"block.create.stressometer": "应力表",
 	"block.create.tiled_glass": "十字玻璃窗",
 	"block.create.tiled_glass_pane": "十字玻璃窗户板",
-	"block.create.track": "UNLOCALIZED: Train Track",
+	"block.create.track": "路轨",
 	"block.create.track_observer": "UNLOCALIZED: Train Observer",
 	"block.create.track_signal": "UNLOCALIZED: Train Signal",
-	"block.create.track_station": "UNLOCALIZED: Train Station",
-	"block.create.train_door": "UNLOCALIZED: Train Door",
-	"block.create.train_trapdoor": "UNLOCALIZED: Train Trapdoor",
+	"block.create.track_station": "列车站点",
+	"block.create.train_door": "列车门",
+	"block.create.train_trapdoor": "列车活板门",
 	"block.create.tuff_pillar": "凝灰岩柱",
 	"block.create.turntable": "转盘",
 	"block.create.veridium": "辉绿矿",
@@ -631,7 +631,7 @@
 	"item.create.honey_bucket": "蜂蜜桶",
 	"item.create.honeyed_apple": "蜜渍苹果",
 	"item.create.incomplete_precision_mechanism": "精密构件（半成品）",
-	"item.create.incomplete_track": "UNLOCALIZED: Incomplete Track",
+	"item.create.incomplete_track": "火车路轨（半成品）",
 	"item.create.iron_sheet": "铁板",
 	"item.create.linked_controller": "无线红石遥控器",
 	"item.create.minecart_contraption": "装配过的矿车",
@@ -646,15 +646,15 @@
 	"item.create.refined_radiance": "光辉石",
 	"item.create.rose_quartz": "玫瑰石英",
 	"item.create.sand_paper": "砂纸",
-	"item.create.schedule": "UNLOCALIZED: Train Schedule",
+	"item.create.schedule": "列车行程表",
 	"item.create.schematic": "蓝图",
 	"item.create.schematic_and_quill": "蓝图与笔",
 	"item.create.shadow_steel": "暗影钢",
-	"item.create.sturdy_sheet": "UNLOCALIZED: Sturdy Sheet",
+	"item.create.sturdy_sheet": "坚实板",
 	"item.create.super_glue": "强力胶",
 	"item.create.sweet_roll": "甜甜卷",
 	"item.create.tree_fertilizer": "树木肥料",
-	"item.create.unprocessed_obsidian_sheet": "UNLOCALIZED: Unprocessed Obsidian Sheet",
+	"item.create.unprocessed_obsidian_sheet": "未加工的黑曜石板",
 	"item.create.vertical_gearbox": "竖直十字齿轮箱",
 	"item.create.wand_of_symmetry": "对称之杖",
 	"item.create.wheat_flour": "小麦粉",
@@ -673,25 +673,25 @@
 	"advancement.create.andesite_casing": "安山时代",
 	"advancement.create.andesite_casing.desc": "使用安山合金和木头来合成一个安山机壳",
 	"advancement.create.mechanical_press": "UNLOCALIZED: Bonk",
-	"advancement.create.mechanical_press.desc": "UNLOCALIZED: Create some sheets in a Mechanical Press",
-	"advancement.create.encased_fan": "UNLOCALIZED: Wind maker",
+	"advancement.create.mechanical_press.desc": "用动力辊压机压一些板子",
+	"advancement.create.encased_fan": "造风机",
 	"advancement.create.encased_fan.desc": "UNLOCALIZED: Place and activate an Encased Fan",
-	"advancement.create.fan_processing": "UNLOCALIZED: Processing by Particle",
-	"advancement.create.fan_processing.desc": "UNLOCALIZED: Use an Encased Fan to process materials",
+	"advancement.create.fan_processing": "粒子加工",
+	"advancement.create.fan_processing.desc": "用鼓风机加工一些材料",
 	"advancement.create.saw_processing": "UNLOCALIZED: Workshop's most feared",
-	"advancement.create.saw_processing.desc": "UNLOCALIZED: Use an upright Mechanical Saw to process materials",
+	"advancement.create.saw_processing.desc": "用向上的动力锯加工一些材料",
 	"advancement.create.compacting": "UNLOCALIZED: Compactification",
 	"advancement.create.compacting.desc": "UNLOCALIZED: Use a Press and a Basin to create less items from more items",
 	"advancement.create.belt": "海带传动",
 	"advancement.create.belt.desc": "用传送带连接两个传动杆",
-	"advancement.create.funnel": "UNLOCALIZED: Airport Aesthetic",
-	"advancement.create.funnel.desc": "UNLOCALIZED: Extract or insert items into a container using a Funnel",
+	"advancement.create.funnel": "机场美学",
+	"advancement.create.funnel.desc": "用漏斗将物品抽出或导入容器",
 	"advancement.create.chute": "轰然倒塌",
 	"advancement.create.chute.desc": "放置一个溜槽（垂直版本的传送带）",
-	"advancement.create.mechanical_mixer": "UNLOCALIZED: Mixing it up",
-	"advancement.create.mechanical_mixer.desc": "UNLOCALIZED: Combine ingredients in a Mechanical Mixer",
-	"advancement.create.burner": "UNLOCALIZED: Sentient Fireplace",
-	"advancement.create.burner.desc": "UNLOCALIZED: Obtain a Blaze Burner",
+	"advancement.create.mechanical_mixer": "混合起来",
+	"advancement.create.mechanical_mixer.desc": "用动力搅拌器混合材料",
+	"advancement.create.burner": "有自我意识的壁炉",
+	"advancement.create.burner.desc": "获得一个烈焰人燃烧室",
 	"advancement.create.water_wheel": "掌控水流",
 	"advancement.create.water_wheel.desc": "放置一个水车并且让它开始旋转！",
 	"advancement.create.windmill": "微风吹拂",
@@ -700,36 +700,36 @@
 	"advancement.create.shifting_gears.desc": "将大齿轮连接到小齿轮上，可以改变装置的转速",
 	"advancement.create.millstone": "便携式粉碎机",
 	"advancement.create.millstone.desc": "放置一个石磨并且为其供能",
-	"advancement.create.super_glue": "UNLOCALIZED: Area of Connect",
-	"advancement.create.super_glue.desc": "UNLOCALIZED: Super Glue some blocks into a group",
-	"advancement.create.contraption_actors": "UNLOCALIZED: Moving with Purpose",
-	"advancement.create.contraption_actors.desc": "UNLOCALIZED: Create a contraption with drills, saws or harvesters on board",
-	"advancement.create.portable_storage_interface": "UNLOCALIZED: Drive-by exchange",
-	"advancement.create.portable_storage_interface.desc": "UNLOCALIZED: Use a Portable Storage Interface to take or insert items into a contraption",
-	"advancement.create.wrench_goggles": "UNLOCALIZED: Kitted out",
-	"advancement.create.wrench_goggles.desc": "UNLOCALIZED: Equip Engineer's goggles and a Wrench",
+	"advancement.create.super_glue": "连接区域",
+	"advancement.create.super_glue.desc": "用强力胶将一些方块黏成一组",
+	"advancement.create.contraption_actors": "有目的地行动",
+	"advancement.create.contraption_actors.desc": "创建一个带有动力钻头、动力锯或动力收割机的移动装置",
+	"advancement.create.portable_storage_interface": "顺道交换",
+	"advancement.create.portable_storage_interface.desc": "用移动式储存接口抽出或导入容器",
+	"advancement.create.wrench_goggles": "全副装备",
+	"advancement.create.wrench_goggles.desc": "装备工程师护目镜和扳手",
 	"advancement.create.stressometer": "精密的应力控制",
 	"advancement.create.stressometer.desc": "放置一个应力表，并且戴上工程师护目镜来读取应力数据",
-	"advancement.create.cuckoo_clock": "UNLOCALIZED: Is it Time?",
-	"advancement.create.cuckoo_clock.desc": "UNLOCALIZED: Witness your Cuckoo Clock announce bedtime",
-	"advancement.create.windmill_maxed": "UNLOCALIZED: A Strong Breeze",
-	"advancement.create.windmill_maxed.desc": "UNLOCALIZED: Assemble a windmill of maximum strength",
-	"advancement.create.ejector_maxed": "UNLOCALIZED: Springboard Champion",
-	"advancement.create.ejector_maxed.desc": "UNLOCALIZED: Get launched for more than 30 blocks by a Weighted Ejector",
+	"advancement.create.cuckoo_clock": "到点了吗？",
+	"advancement.create.cuckoo_clock.desc": "目睹布谷鸟闹钟提醒你睡觉",
+	"advancement.create.windmill_maxed": "强风肆虐",
+	"advancement.create.windmill_maxed.desc": "组装最强力的风车",
+	"advancement.create.ejector_maxed": "跳板冠军",
+	"advancement.create.ejector_maxed.desc": "被弹射置物台弹出30格以外",
 	"advancement.create.pulley_maxed": "UNLOCALIZED: Rope to Nowhere",
-	"advancement.create.pulley_maxed.desc": "UNLOCALIZED: Extend a Rope Pulley over 200 blocks deep",
+	"advancement.create.pulley_maxed.desc": "让绳索滑轮延伸超过200格",
 	"advancement.create.cart_pickup": "UNLOCALIZED: Strong Arms",
-	"advancement.create.cart_pickup.desc": "UNLOCALIZED: Pick up a Minecart Contraption with at least 200 attached blocks",
-	"advancement.create.anvil_plough": "UNLOCALIZED: Blacksmith Artillery",
-	"advancement.create.anvil_plough.desc": "UNLOCALIZED: Launch an Anvil with Mechanical ploughs",
-	"advancement.create.lava_wheel_00000": "UNLOCALIZED: Magma Wheel",
+	"advancement.create.cart_pickup.desc": "捡起一个至少带有200个方块的矿车结构",
+	"advancement.create.anvil_plough": "锻匠大炮",
+	"advancement.create.anvil_plough.desc": "用动力犁发射铁砧",
+	"advancement.create.lava_wheel_00000": "风火轮",
 	"advancement.create.lava_wheel_00000.desc": "UNLOCALIZED: This shouldn't have worked§7\n(Hidden Advancement)",
-	"advancement.create.hand_crank_000": "UNLOCALIZED: Workout Session",
-	"advancement.create.hand_crank_000.desc": "UNLOCALIZED: Use a Hand Crank until fully exhausted§7\n(Hidden Advancement)",
+	"advancement.create.hand_crank_000": "锻炼时间",
+	"advancement.create.hand_crank_000.desc": "转动手摇曲柄直到耗尽饥饿值§7\n(Hidden Advancement)",
 	"advancement.create.belt_funnel_kiss": "鹦鹉和垂翼",
 	"advancement.create.belt_funnel_kiss.desc": "让两个安装在传送带上的漏斗深情相吻",
-	"advancement.create.stressometer_maxed": "UNLOCALIZED: Perfectly Stressed",
-	"advancement.create.stressometer_maxed.desc": "UNLOCALIZED: Get a 100% readout from a Stressometer§7\n(Hidden Advancement)",
+	"advancement.create.stressometer_maxed": "完全消耗",
+	"advancement.create.stressometer_maxed.desc": "让应力表的读数为 100%§7\n(Hidden Advancement)",
 	"advancement.create.copper": "UNLOCALIZED: More Sturdier Rocks",
 	"advancement.create.copper.desc": "UNLOCALIZED: Amass some Copper for your exploits in Fluid Manipulation",
 	"advancement.create.copper_casing": "铜器时代",
@@ -738,20 +738,20 @@
 	"advancement.create.spout.desc": "观察注液器灌满物品",
 	"advancement.create.drain": "UNLOCALIZED: Tumble Draining",
 	"advancement.create.drain.desc": "UNLOCALIZED: Watch a fluid containing item be emptied by an Item Drain",
-	"advancement.create.steam_engine": "UNLOCALIZED: The Powerhouse",
+	"advancement.create.steam_engine": "发电站",
 	"advancement.create.steam_engine.desc": "UNLOCALIZED: Use a Steam engine to generate torque",
-	"advancement.create.steam_whistle": "UNLOCALIZED: Voice of an Angel",
-	"advancement.create.steam_whistle.desc": "UNLOCALIZED: Activate a Steam Whistle",
+	"advancement.create.steam_whistle": "天籁之音",
+	"advancement.create.steam_whistle.desc": "激活一个蒸汽哨",
 	"advancement.create.backtank": "UNLOCALIZED: Pressure to Go",
 	"advancement.create.backtank.desc": "UNLOCALIZED: Create a copper backtank and make it accumulate Air Pressure",
-	"advancement.create.diving_suit": "UNLOCALIZED: Ready for the Depths",
-	"advancement.create.diving_suit.desc": "UNLOCALIZED: Equip a diving helmet together with your backtank and jump into water",
-	"advancement.create.mechanical_pump_0": "UNLOCALIZED: Under Pressure",
-	"advancement.create.mechanical_pump_0.desc": "UNLOCALIZED: Place and power a Mechanical Pump",
+	"advancement.create.diving_suit": "深潜准备",
+	"advancement.create.diving_suit.desc": "装备铜制背罐和潜水头盔，然后跳进水里",
+	"advancement.create.mechanical_pump_0": "面临压力",
+	"advancement.create.mechanical_pump_0.desc": "放置动力泵并为其供能",
 	"advancement.create.glass_pipe": "流之观察者",
 	"advancement.create.glass_pipe.desc": "透过带窗的流体管道观察流体在管道中流淌，使用扳手可打开直线流体管道的窗户",
-	"advancement.create.water_supply": "UNLOCALIZED: Puddle Collector",
-	"advancement.create.water_supply.desc": "UNLOCALIZED: Use the pulling end of a pipe or pump to collect a water block",
+	"advancement.create.water_supply": "水洼收集者",
+	"advancement.create.water_supply.desc": "用流体管道的末端抽取水方块",
 	"advancement.create.hose_pulley": "工业泄漏",
 	"advancement.create.hose_pulley.desc": "放下一个软管滑轮，观察它排干或填充一大片流体",
 	"advancement.create.chocolate_bucket": "UNLOCALIZED: A World of Imagination",
@@ -760,10 +760,10 @@
 	"advancement.create.honey_drain.desc": "UNLOCALIZED: Use pipes to pull honey from a Bee Nest or Bee House",
 	"advancement.create.hose_pulley_lava": "UNLOCALIZED: Tapping the Mantle",
 	"advancement.create.hose_pulley_lava.desc": "UNLOCALIZED: Pump from a body of Lava large enough to be considered infinite",
-	"advancement.create.steam_engine_maxed": "UNLOCALIZED: Full Steam",
-	"advancement.create.steam_engine_maxed.desc": "UNLOCALIZED: Run a boiler at the maximum level of power",
-	"advancement.create.foods": "UNLOCALIZED: Balanced Diet",
-	"advancement.create.foods.desc": "UNLOCALIZED: Create Chocolate Berries, a Honeyed Apple and a Sweet Roll; all from the same Spout",
+	"advancement.create.steam_engine_maxed": "全速前进",
+	"advancement.create.steam_engine_maxed.desc": "搭建一个最高级的锅炉",
+	"advancement.create.foods": "均衡饮食",
+	"advancement.create.foods.desc": "用同一个注液器分别做出甜甜卷、蜂蜜苹果和巧克力包层浆果",
 	"advancement.create.diving_suit_lava": "UNLOCALIZED: Swimming with the Striders",
 	"advancement.create.diving_suit_lava.desc": "UNLOCALIZED: Attempt to take a dive in lava with your Copper Diving Gear§7\n(Hidden Advancement)",
 	"advancement.create.chained_drain": "UNLOCALIZED: On a Roll",
@@ -875,7 +875,7 @@
 	"death.attack.create.potato_cannon.item": "%1$s被%2$s用%3$s射死了",
 	"death.attack.create.cuckoo_clock_explosion": "%1$s被布谷鸟闹钟炸得粉身碎骨",
 	"death.attack.create.cuckoo_clock_explosion.player": "%1$s被布谷鸟闹钟炸得粉身碎骨",
-	"death.attack.create.run_over": "UNLOCALIZED: %1$s was run over by %2$s",
+	"death.attack.create.run_over": "%2$s的车轮压到了%1$s的脸上",
 
 	"create.block.deployer.damage_source_name": "二五仔机械手",
 	"create.block.cart_assembler.invalid": "请将矿车装配器放置在铁轨上",
