--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -302,8 +302,8 @@
 	"block.create.mechanical_pump": "动力泵",
 	"block.create.mechanical_saw": "动力锯",
 	"block.create.metal_bracket": "金属支架",
-	"block.create.metal_girder": "金属梁柱",
-	"block.create.metal_girder_encased_shaft": "UNLOCALIZED: Metal Girder Encased Shaft",
+	"block.create.metal_girder": "金属梁",
+	"block.create.metal_girder_encased_shaft": "金属梁传动杆箱",
 	"block.create.millstone": "石磨",
 	"block.create.minecart_anchor": "矿车锚",
 	"block.create.mysterious_cuckoo_clock": "布谷鸟闹钟",
