--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -494,19 +494,19 @@
 	"block.create.spout": "注液器",
 	"block.create.spruce_window": "云杉木窗户",
 	"block.create.spruce_window_pane": "云杉木窗户板",
-	"block.create.steam_engine": "蒸汽引擎",
-	"block.create.steam_whistle": "蒸汽哨",
-	"block.create.steam_whistle_extension": "延展蒸汽哨",
+	"block.create.steam_engine": "蒸汽引擎",	
+  "block.create.steam_whistle": "蒸汽笛",
+	"block.create.steam_whistle_extension": "蒸汽笛加长段",
 	"block.create.sticker": "黏着器",
 	"block.create.sticky_mechanical_piston": "黏性动力活塞",
 	"block.create.stockpile_switch": "存量转信器",
 	"block.create.stressometer": "应力表",
 	"block.create.tiled_glass": "十字玻璃窗",
 	"block.create.tiled_glass_pane": "十字玻璃窗户板",
-	"block.create.track": "路轨",
-	"block.create.track_observer": "UNLOCALIZED: Train Observer",
-	"block.create.track_signal": "UNLOCALIZED: Train Signal",
-	"block.create.track_station": "列车站点",
+	"block.create.track": "列车轨道",
+	"block.create.track_observer": "列车侦测器",
+	"block.create.track_signal": "列车信号机",
+	"block.create.track_station": "列车站",
 	"block.create.train_door": "列车门",
 	"block.create.train_trapdoor": "列车活板门",
 	"block.create.tuff_pillar": "凝灰岩柱",
