--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -646,11 +646,11 @@
 	"item.create.refined_radiance": "光辉石",
 	"item.create.rose_quartz": "玫瑰石英",
 	"item.create.sand_paper": "砂纸",
-	"item.create.schedule": "列车行程表",
+	"item.create.schedule": "列车时刻表",
 	"item.create.schematic": "蓝图",
 	"item.create.schematic_and_quill": "蓝图与笔",
 	"item.create.shadow_steel": "暗影钢",
-	"item.create.sturdy_sheet": "坚实板",
+	"item.create.sturdy_sheet": "坚固薄板",
 	"item.create.super_glue": "强力胶",
 	"item.create.sweet_roll": "甜甜卷",
 	"item.create.tree_fertilizer": "树木肥料",
