中文翻译2：其他物品名称

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -213,7 +213,7 @@
 	"block.create.exposed_copper_tile_slab": "斑驳的铜瓦台阶",
 	"block.create.exposed_copper_tile_stairs": "斑驳的铜瓦楼梯",
 	"block.create.exposed_copper_tiles": "斑驳的铜瓦",
-	"block.create.fake_track": "UNLOCALIZED: Track Marker for Maps",
+	"block.create.fake_track": "地图的轨道标记",
 	"block.create.fluid_pipe": "流体管道",
 	"block.create.fluid_tank": "流体储罐",
 	"block.create.fluid_valve": "流体阀门",
@@ -248,7 +248,7 @@
 	"block.create.item_vault": "物品保险库",
 	"block.create.jungle_window": "丛林木窗户",
 	"block.create.jungle_window_pane": "丛林木窗户板",
-	"block.create.large_bogey": "UNLOCALIZED: Large Bogey",
+	"block.create.large_bogey": "大转向架",
 	"block.create.large_cogwheel": "大齿轮",
 	"block.create.layered_andesite": "层叠安山岩",
 	"block.create.layered_asurine": "层叠皓蓝石",
@@ -392,7 +392,7 @@
 	"block.create.portable_fluid_interface": "移动式流体接口",
 	"block.create.portable_storage_interface": "移动式存储接口",
 	"block.create.powered_latch": "锁存器",
-	"block.create.powered_shaft": "UNLOCALIZED: Powered Shaft",
+	"block.create.powered_shaft": "动力曲轴",
 	"block.create.powered_toggle_latch": "转换锁存器",
 	"block.create.pulley_magnet": "滑轮磁铁",
 	"block.create.pulse_extender": "脉冲延长器",
@@ -438,7 +438,7 @@
 	"block.create.small_asurine_brick_stairs": "皓蓝石小砖块楼梯",
 	"block.create.small_asurine_brick_wall": "皓蓝石小砖块墙",
 	"block.create.small_asurine_bricks": "皓蓝石小砖块",
-	"block.create.small_bogey": "UNLOCALIZED: Small Bogey",
+	"block.create.small_bogey": "小转向架",
 	"block.create.small_calcite_brick_slab": "方解石小砖块台阶",
 	"block.create.small_calcite_brick_stairs": "方解石小砖块楼梯",
 	"block.create.small_calcite_brick_wall": "方解石小砖块墙",
