--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -1401,29 +1401,29 @@
 	"create.backtank.low": "UNLOCALIZED: Backtank pressure low",
 	"create.backtank.depleted": "UNLOCALIZED: Backtank pressure depleted",
 
-	"create.hint.derailed_train.title": "UNLOCALIZED: Derailed Train",
-	"create.hint.derailed_train": "UNLOCALIZED: It appears this _Train_ is no longer sitting on a connected track piece. _Right-Click_ using a _wrench_ in order to relocate it to a nearby track.",
+	"create.hint.derailed_train.title": "列车脱轨",
+	"create.hint.derailed_train": "这代表_列车_脱离了轨道。使用_扳手右击_以移动到最近的轨道",
 
-	"create.boiler.status": "UNLOCALIZED: Boiler Status:  %1$s",
-	"create.boiler.status_short": "UNLOCALIZED: Boiler:  %1$s",
-	"create.boiler.passive": "UNLOCALIZED: Passive",
-	"create.boiler.idle": "UNLOCALIZED: Idle",
-	"create.boiler.lvl": "UNLOCALIZED: Lvl %1$s",
-	"create.boiler.max_lvl": "UNLOCALIZED: Max",
-	"create.boiler.size": "UNLOCALIZED: Size",
-	"create.boiler.size_dots": "UNLOCALIZED: ....... ",
-	"create.boiler.water": "UNLOCALIZED: Water",
-	"create.boiler.water_dots": "UNLOCALIZED: ... ",
-	"create.boiler.heat": "UNLOCALIZED: Heat",
-	"create.boiler.heat_dots": "UNLOCALIZED: ...... ",
-	"create.boiler.via_one_engine": "UNLOCALIZED: via 1 engine",
-	"create.boiler.via_engines": "UNLOCALIZED: via %1$s engines",
+	"create.boiler.status": "锅炉状态:  %1$s",
+	"create.boiler.status_short": "锅炉:  %1$s",
+	"create.boiler.passive": "被动",
+	"create.boiler.idle": "闲置",
+	"create.boiler.lvl": "Lvl %1$s",
+	"create.boiler.max_lvl": "最高级",
+	"create.boiler.size": "大小",
+	"create.boiler.size_dots": "....... ",
+	"create.boiler.water": "水量",
+	"create.boiler.water_dots": "....... ",
+	"create.boiler.heat": "供热",
+	"create.boiler.heat_dots": "...... ",
+	"create.boiler.via_one_engine": "通过1个引擎",
+	"create.boiler.via_engines": "通过%1$s个引擎",
 
-	"create.gui.schedule.lmb_edit": "UNLOCALIZED: Left-Click to Edit",
-	"create.gui.schedule.rmb_remove": "UNLOCALIZED: Right-Click to Remove",
-	"create.gui.schedule.duplicate": "UNLOCALIZED: Duplicate",
-	"create.gui.schedule.remove_entry": "UNLOCALIZED: Remove Action",
-	"create.gui.schedule.add_entry": "UNLOCALIZED: Add Action",
+	"create.gui.schedule.lmb_edit": "左击以编辑",
+	"create.gui.schedule.rmb_remove": "右击以移除",
+	"create.gui.schedule.duplicate": "复制",
+	"create.gui.schedule.remove_entry": "移除行动",
+	"create.gui.schedule.add_entry": "添加行动",
 	"create.gui.schedule.move_up": "UNLOCALIZED: Move up",
 	"create.gui.schedule.move_down": "UNLOCALIZED: Move down",
 	"create.gui.schedule.add_condition": "UNLOCALIZED: Add Condition",
@@ -1463,16 +1463,16 @@
 	"create.schedule.condition.time_of_day.scheduled": "UNLOCALIZED: Scheduled Time: %1$s",
 	"create.schedule.condition.time_of_day.digital_format": "UNLOCALIZED: %1$s:%3$s %4$s",
 	"create.schedule.condition.time_of_day.rotation": "UNLOCALIZED: Rotation",
-	"create.schedule.condition.time_of_day.rotation.every_24": "UNLOCALIZED: Every Day",
-	"create.schedule.condition.time_of_day.rotation.every_12": "UNLOCALIZED: Every 12:00",
-	"create.schedule.condition.time_of_day.rotation.every_6": "UNLOCALIZED: Every 6:00",
-	"create.schedule.condition.time_of_day.rotation.every_4": "UNLOCALIZED: Every 4:00",
-	"create.schedule.condition.time_of_day.rotation.every_3": "UNLOCALIZED: Every 3:00",
-	"create.schedule.condition.time_of_day.rotation.every_2": "UNLOCALIZED: Every 2:00",
-	"create.schedule.condition.time_of_day.rotation.every_1": "UNLOCALIZED: Every 1:00",
-	"create.schedule.condition.time_of_day.rotation.every_0_45": "UNLOCALIZED: Every 0:45",
-	"create.schedule.condition.time_of_day.rotation.every_0_30": "UNLOCALIZED: Every 0:30",
-	"create.schedule.condition.time_of_day.rotation.every_0_15": "UNLOCALIZED: Every 0:15",
+	"create.schedule.condition.time_of_day.rotation.every_24": "每天",
+	"create.schedule.condition.time_of_day.rotation.every_12": "每12:00",
+	"create.schedule.condition.time_of_day.rotation.every_6": "每6:00",
+	"create.schedule.condition.time_of_day.rotation.every_4": "每4:00",
+	"create.schedule.condition.time_of_day.rotation.every_3": "每3:00",
+	"create.schedule.condition.time_of_day.rotation.every_2": "每2:00",
+	"create.schedule.condition.time_of_day.rotation.every_1": "每1:00",
+	"create.schedule.condition.time_of_day.rotation.every_0_45": "每0:45",
+	"create.schedule.condition.time_of_day.rotation.every_0_30": "每0:30",
+	"create.schedule.condition.time_of_day.rotation.every_0_15": "每0:15",
 	"create.schedule.condition.time_of_day.status": "UNLOCALIZED: Departs at ",
 	"create.schedule.condition.threshold.train_holds": "UNLOCALIZED: Train holds %1$s",
 	"create.schedule.condition.threshold.greater": "UNLOCALIZED: more than",
