中文翻译3：思索——轨道

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -2880,32 +2880,32 @@
 	"create.ponder.super_glue.text_5": "左击可以清除强力胶",
 	"create.ponder.super_glue.text_6": "UNLOCALIZED: Blocks hanging on others usually do not require glue",
 
-	"create.ponder.track_chunks.header": "UNLOCALIZED: Traversing unloaded Chunks",
-	"create.ponder.track_chunks.text_1": "UNLOCALIZED: Tracks stay functional outside of loaded chunks",
-	"create.ponder.track_chunks.text_2": "UNLOCALIZED: Trains will travel through inactive sections of the world without issue",
-	"create.ponder.track_chunks.text_3": "UNLOCALIZED: They will still stop at stations or red signals",
-	"create.ponder.track_chunks.text_4": "UNLOCALIZED: However, Drills and other on-board machines will not operate",
-	"create.ponder.track_chunks.text_5": "UNLOCALIZED: Once near a Player, the train will re-appear",
+	"create.ponder.track_chunks.header": "横穿卸载的区块",
+	"create.ponder.track_chunks.text_1": "轨道在加载的区块之外仍然保持运作",
+	"create.ponder.track_chunks.text_2": "列车将毫无问题地横穿世界上不活跃的区块",
+	"create.ponder.track_chunks.text_3": "他们仍然会停在车站或红灯处",
+	"create.ponder.track_chunks.text_4": "但是，钻头和其他机载机器将无法运行",
+	"create.ponder.track_chunks.text_5": "一旦靠近玩家，列车将重新出现",
 
 	"create.ponder.track_observer.header": "UNLOCALIZED: Detecting Trains",
 	"create.ponder.track_observer.text_1": "UNLOCALIZED: Select a Train Track then place the Observer nearby",
 	"create.ponder.track_observer.text_2": "UNLOCALIZED: The Observer will detect any Trains passing over the marker",
 	"create.ponder.track_observer.text_3": "UNLOCALIZED: Observers can be filtered to activate for matching cargo",
 
-	"create.ponder.track_placement.header": "UNLOCALIZED: Placing Train Tracks",
-	"create.ponder.track_placement.text_1": "UNLOCALIZED: A new type of rail designed for Train Contraptions",
-	"create.ponder.track_placement.text_2": "UNLOCALIZED: To place rows of track in bulk, click on an existing track",
-	"create.ponder.track_placement.text_3": "UNLOCALIZED: Then place or select a second track",
-	"create.ponder.track_placement.text_4": "UNLOCALIZED: Tracks can also be placed as turns or slopes",
-	"create.ponder.track_placement.text_5": "UNLOCALIZED: When connecting, tracks will try to make each turn equally sized",
-	"create.ponder.track_placement.text_6": "UNLOCALIZED: Holding the sprint key while connecting...",
-	"create.ponder.track_placement.text_7": "UNLOCALIZED: ...will create the longest fitting bend instead",
-	"create.ponder.track_placement.text_8": "UNLOCALIZED: Materials in the off-hand will be paved under tracks automatically",
+	"create.ponder.track_placement.header": "放置列车轨道",
+	"create.ponder.track_placement.text_1": "一种专为列车装置设计的新型轨道",
+	"create.ponder.track_placement.text_2": "要批量放置多行轨道，单击现有轨道",
+	"create.ponder.track_placement.text_3": "然后选择或放置第二个轨道",
+	"create.ponder.track_placement.text_4": "轨道也可以放置为转弯或斜坡",
+	"create.ponder.track_placement.text_5": "连接时，轨道将尝试使每个转弯的大小相等",
+	"create.ponder.track_placement.text_6": "连接时按住冲刺键……",
+	"create.ponder.track_placement.text_7": "……将创建最长的适合的弯道",
+	"create.ponder.track_placement.text_8": "副手的材料会自动铺在轨道下",
 
-	"create.ponder.track_portal.header": "UNLOCALIZED: Tracks and the Nether",
-	"create.ponder.track_portal.text_1": "UNLOCALIZED: Tracks placed up against a nether portal...",
-	"create.ponder.track_portal.text_2": "UNLOCALIZED: ...will attempt to create a paired track on the other side",
-	"create.ponder.track_portal.text_3": "UNLOCALIZED: Trains on this track are now able to travel across dimensions",
+	"create.ponder.track_portal.header": "轨道与下界",
+	"create.ponder.track_portal.text_1": "对着下界传送门放置的轨道……",
+	"create.ponder.track_portal.text_2": "……将尝试在另一侧创建成对的轨道",
+	"create.ponder.track_portal.text_3": "这条轨道上的列车现在可以跨维度旅行",
 
 	"create.ponder.train_assembly.header": "UNLOCALIZED: Assembling Trains",
 	"create.ponder.train_assembly.text_1": "UNLOCALIZED: Select a Train Track then place the Station nearby",
