中文翻译4：思索——列车车站

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -506,7 +506,7 @@
 	"block.create.track": "列车轨道",
 	"block.create.track_observer": "列车侦测器",
 	"block.create.track_signal": "列车信号机",
-	"block.create.track_station": "列车站",
+	"block.create.track_station": "列车车站",
 	"block.create.train_door": "列车门",
 	"block.create.train_trapdoor": "列车活板门",
 	"block.create.tuff_pillar": "凝灰岩柱",
@@ -2907,22 +2907,22 @@
 	"create.ponder.track_portal.text_2": "……将尝试在另一侧创建成对的轨道",
 	"create.ponder.track_portal.text_3": "这条轨道上的列车现在可以跨维度旅行",
 
-	"create.ponder.train_assembly.header": "UNLOCALIZED: Assembling Trains",
-	"create.ponder.train_assembly.text_1": "UNLOCALIZED: Select a Train Track then place the Station nearby",
-	"create.ponder.train_assembly.text_10": "UNLOCALIZED: Every Train requires Train Controls on board",
-	"create.ponder.train_assembly.text_11": "UNLOCALIZED: An optional second one allows departure from Stations in both directions",
-	"create.ponder.train_assembly.text_12": "UNLOCALIZED: Open the Station UI and confirm the Assembly process",
-	"create.ponder.train_assembly.text_13": "UNLOCALIZED: Trains can be disassembled back into blocks at stations only",
-	"create.ponder.train_assembly.text_14": "UNLOCALIZED: When used on a station, maps will add a labeled marker at the location",
-	"create.ponder.train_assembly.text_15": "UNLOCALIZED: Assembled Trains can be relocated to nearby Tracks using the Wrench",
-	"create.ponder.train_assembly.text_2": "UNLOCALIZED: Stations are the Waypoints of your Track Network",
-	"create.ponder.train_assembly.text_3": "UNLOCALIZED: To create a new Train, open the UI and switch to Assembly Mode",
-	"create.ponder.train_assembly.text_4": "UNLOCALIZED: During Assembly no scheduled trains will approach this station",
-	"create.ponder.train_assembly.text_5": "UNLOCALIZED: Create new bogeys by using Train Casing on Tracks",
-	"create.ponder.train_assembly.text_6": "UNLOCALIZED: Click the track again to cycle between bogey designs",
-	"create.ponder.train_assembly.text_7": "UNLOCALIZED: Attach blocks with the help of Super Glue",
-	"create.ponder.train_assembly.text_8": "UNLOCALIZED: Assembled Trains will move faster if they can find fuel in assembled chests or barrels",
-	"create.ponder.train_assembly.text_9": "UNLOCALIZED: Fuel stored in Vaults will not be consumed by the train",
+	"create.ponder.train_assembly.header": "组装列车",
+	"create.ponder.train_assembly.text_1": "选择列车轨道，然后将车站放置在附近",
+	"create.ponder.train_assembly.text_10": "每列列车都需要装上列车控制器",
+	"create.ponder.train_assembly.text_11": "可选的第二个允许从车站往两个方向出发",
+	"create.ponder.train_assembly.text_12": "打开车站UI并确认组装过程",
+	"create.ponder.train_assembly.text_13": "列车只能在车站被拆解为方块",
+	"create.ponder.train_assembly.text_14": "在车站上使用时，地图会在该位置添加一个带标签的标记",
+	"create.ponder.train_assembly.text_15": "组装好的列车可以使用扳手重新摆放到相邻的轨道",
+	"create.ponder.train_assembly.text_2": "车站是你的轨道网络的路径点",
+	"create.ponder.train_assembly.text_3": "要创建新列车，打开UI并切换到组装模式",
+	"create.ponder.train_assembly.text_4": "在组装期间，时刻表上的列车不会接近这个车站",
+	"create.ponder.train_assembly.text_5": "在轨道上使用列车外壳创建新的转向架",
+	"create.ponder.train_assembly.text_6": "再次单击轨道以在转向架设计之间循环",
+	"create.ponder.train_assembly.text_7": "在强力胶的帮助下连接方块",
+	"create.ponder.train_assembly.text_8": "如果组装好的列车可以在组装好的箱子或桶中找到燃料，它们会移动得更快",
+	"create.ponder.train_assembly.text_9": "储存在保险库中的燃料不会被列车消耗",
 
 	"create.ponder.train_controls.header": "UNLOCALIZED: Controlling Trains",
 	"create.ponder.train_controls.text_1": "UNLOCALIZED: Train Controls are required on every train contraption",
