中文翻译4：思索——控制列车

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -2924,15 +2924,15 @@
 	"create.ponder.train_assembly.text_8": "如果组装好的列车可以在组装好的箱子或桶中找到燃料，它们会移动得更快",
 	"create.ponder.train_assembly.text_9": "储存在保险库中的燃料不会被列车消耗",
 
-	"create.ponder.train_controls.header": "UNLOCALIZED: Controlling Trains",
-	"create.ponder.train_controls.text_1": "UNLOCALIZED: Train Controls are required on every train contraption",
-	"create.ponder.train_controls.text_2": "UNLOCALIZED: Once assembled, right-click the block to start driving",
-	"create.ponder.train_controls.text_3": "UNLOCALIZED: Accelerate and steer the Train using movement keybinds",
-	"create.ponder.train_controls.text_4": "UNLOCALIZED: If desired, the top speed can be fine-tuned using the mouse wheel",
-	"create.ponder.train_controls.text_5": "UNLOCALIZED: Hold space to approach a nearby Station",
-	"create.ponder.train_controls.text_6": "UNLOCALIZED: Trains can only be disassembled back into blocks at Stations",
-	"create.ponder.train_controls.text_7": "UNLOCALIZED: Assembled Whistles can be activated with the sprint key",
-	"create.ponder.train_controls.text_8": "UNLOCALIZED: Sneak or click again to stop controlling the Train",
+	"create.ponder.train_controls.header": "控制列车",
+	"create.ponder.train_controls.text_1": "每个列车装置都需要列车控制器",
+	"create.ponder.train_controls.text_2": "组装好后，右击方块开始驾驶",
+	"create.ponder.train_controls.text_3": "使用移动键加速和引导火车",
+	"create.ponder.train_controls.text_4": "如果需要，可以使用鼠标滚轮微调最高速度",
+	"create.ponder.train_controls.text_5": "按住空格键来接近最近的车站",
+	"create.ponder.train_controls.text_6": "列车只能在车站被拆解为方块",
+	"create.ponder.train_controls.text_7": "组装的蒸汽笛可以用冲刺键激活",
+	"create.ponder.train_controls.text_8": "潜行或再次点击可以停止控制列车",
 
 	"create.ponder.train_schedule.header": "UNLOCALIZED: Using Train Schedules",
 	"create.ponder.train_schedule.text_1": "UNLOCALIZED: Schedules allow Trains to be controlled by other Drivers",
