中文翻译4：思索——避免相撞

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -2953,16 +2953,16 @@
 	"create.ponder.train_signal_redstone.text_1": "UNLOCALIZED: Signals can be forced red by a redstone signal",
 	"create.ponder.train_signal_redstone.text_2": "UNLOCALIZED: Reversely, red signals emit a comparator output",
 
-	"create.ponder.train_signal_signaling.header": "UNLOCALIZED: Collision Prevention with Signals",
-	"create.ponder.train_signal_signaling.text_1": "UNLOCALIZED: Train Signals divide a track into segments",
-	"create.ponder.train_signal_signaling.text_2": "UNLOCALIZED: If a Segment is occupied, no other Trains will be allowed entry",
-	"create.ponder.train_signal_signaling.text_3": "UNLOCALIZED: Thus, each Segment will contain only one Train at a time",
-	"create.ponder.train_signal_signaling.text_4": "UNLOCALIZED: A second Signal mode is available via the Wrench",
-	"create.ponder.train_signal_signaling.text_5": "UNLOCALIZED: Segments of a brass signal usually lead into standard signals",
-	"create.ponder.train_signal_signaling.text_6": "UNLOCALIZED: This special Signal can stop trains under a second condition",
-	"create.ponder.train_signal_signaling.text_7": "UNLOCALIZED: It will stop Trains, which, upon entering...",
-	"create.ponder.train_signal_signaling.text_8": "UNLOCALIZED: ...would not be able to leave the Segment immediately",
-	"create.ponder.train_signal_signaling.text_9": "UNLOCALIZED: This helps keeping queued Trains out of a busy Segment",
+	"create.ponder.train_signal_signaling.header": "用信号机避免相撞",
+	"create.ponder.train_signal_signaling.text_1": "列车信号机将轨道分成多个区间",
+	"create.ponder.train_signal_signaling.text_2": "如果一个区间被占用，则不允许其他列车进入",
+	"create.ponder.train_signal_signaling.text_3": "因此，每个区间同时只能容纳一列列车",
+	"create.ponder.train_signal_signaling.text_4": "通过扳手可以使用第二种信号模式",
+	"create.ponder.train_signal_signaling.text_5": "黄铜信号区间通常会产生标准信号",
+	"create.ponder.train_signal_signaling.text_6": "这种特殊的信号可以在第二种情况下停止列车",
+	"create.ponder.train_signal_signaling.text_7": "它会停止列车，该列车在进入时……",
+	"create.ponder.train_signal_signaling.text_8": "……将无法立即离开该区间",
+	"create.ponder.train_signal_signaling.text_9": "这有助于排队的列车远离繁忙的区间",
 
 	"create.ponder.valve_handle.header": "使用阀门手轮产生旋转力",
 	"create.ponder.valve_handle.text_1": "玩家可以手动使用阀门手轮来产生旋转力",
