中文翻译：思索——使用列车时刻表

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -2934,13 +2934,13 @@
 	"create.ponder.train_controls.text_7": "组装的蒸汽笛可以用冲刺键激活",
 	"create.ponder.train_controls.text_8": "潜行或再次点击可以停止控制列车",
 
-	"create.ponder.train_schedule.header": "UNLOCALIZED: Using Train Schedules",
-	"create.ponder.train_schedule.text_1": "UNLOCALIZED: Schedules allow Trains to be controlled by other Drivers",
-	"create.ponder.train_schedule.text_2": "UNLOCALIZED: Right-click with the item in hand to open its Interface",
-	"create.ponder.train_schedule.text_3": "UNLOCALIZED: Once programmed, the Schedule can be handed off to a Train Driver",
-	"create.ponder.train_schedule.text_4": "UNLOCALIZED: Any mob or blaze burner sitting in front of Train Controls is an eligible conductor",
-	"create.ponder.train_schedule.text_5": "UNLOCALIZED: Creatures on a lead can be given their seat more conveniently",
-	"create.ponder.train_schedule.text_6": "UNLOCALIZED: Schedules can be retrieved from Drivers at any moment",
+	"create.ponder.train_schedule.header": "使用列车时刻表",
+	"create.ponder.train_schedule.text_1": "时刻表让列车可以被其他司机控制",
+	"create.ponder.train_schedule.text_2": "将物品拿在手上右击打开界面",
+	"create.ponder.train_schedule.text_3": "一旦规划好，时刻表就可以交给列车司机",
+	"create.ponder.train_schedule.text_4": "任何坐在列车控制器前面的生物或烈焰人燃烧室都是合格的列车长",
+	"create.ponder.train_schedule.text_5": "用拴绳拴住生物可以更方便地给予它们座位",
+	"create.ponder.train_schedule.text_6": "可以随时从司机那里取回时刻表",
 
 	"create.ponder.train_signal_placement.header": "放置列车信号机",
 	"create.ponder.train_signal_placement.text_1": "选择一个列车轨道，然后将信号机放置在附近",
