中文翻译：思索——车站和调度

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -2124,13 +2124,13 @@
 	"create.ponder.andesite_tunnel.text_3": "……经过的所有物品堆都会被精准地分出一个物品",
 	"create.ponder.andesite_tunnel.text_4": "剩下的物品则不受影响，继续前进",
 
-	"create.ponder.auto_schedule.header": "UNLOCALIZED: Stations & Scheduling",
-	"create.ponder.auto_schedule.text_1": "UNLOCALIZED: Schedules can be used to provide drivers with a destination",
-	"create.ponder.auto_schedule.text_2": "UNLOCALIZED: Comparators will receive a signal whenever a Train is present",
-	"create.ponder.auto_schedule.text_3": "UNLOCALIZED: Mind that a Station can only be approached from the indicated direction",
-	"create.ponder.auto_schedule.text_4": "UNLOCALIZED: Stations can also be used to assign new Schedules automatically",
-	"create.ponder.auto_schedule.text_5": "UNLOCALIZED: The Schedule placed on a station will automatically copy itself to present trains",
-	"create.ponder.auto_schedule.text_6": "UNLOCALIZED: As opposed to manual scheduling, drivers will not take the item with them",
+	"create.ponder.auto_schedule.header": "车站和调度",
+	"create.ponder.auto_schedule.text_1": "时刻表可用于为司机提供目的地",
+	"create.ponder.auto_schedule.text_2": "每当有列车出现时，比较器会收到一个信号",
+	"create.ponder.auto_schedule.text_3": "注意，只能从指示的方向接近车站",
+	"create.ponder.auto_schedule.text_4": "车站也可以用于自动分配新的时刻表",
+	"create.ponder.auto_schedule.text_5": "放置在车站上的时刻表会自动复制到当前列车上",
+	"create.ponder.auto_schedule.text_6": "与手动调度相反，司机不会携带物品在身上",
 
 	"create.ponder.basin.header": "工作盆内物品处理",
 	"create.ponder.basin.text_1": "一个可以对放入的物品以及流体进行处理的盆",
