中文翻译：思索——思索索引（未完成）

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -2061,7 +2061,7 @@
 	"create.ponder.close": "思索结束",
 	"create.ponder.identify": "显示方块名称",
 	"create.ponder.next": "下一情景",
-	"create.ponder.next_up": "UNLOCALIZED: Up Next:",
+	"create.ponder.next_up": "接下来：",
 	"create.ponder.previous": "上一情景",
 	"create.ponder.replay": "重放",
 	"create.ponder.think_back": "回想",
@@ -2110,8 +2110,8 @@
 	"create.ponder.tag.logistics.description": "该组件可以协助物品运输",
 	"create.ponder.tag.display_targets": "UNLOCALIZED: Targets for Display Links",
 	"create.ponder.tag.display_targets.description": "UNLOCALIZED: Components or Blocks which can process and display the data received from a Display Link",
-	"create.ponder.tag.train_related": "UNLOCALIZED: Railway Equipment",
-	"create.ponder.tag.train_related.description": "UNLOCALIZED: Components used in the construction or management of Train Contraptions",
+	"create.ponder.tag.train_related": "铁路设备",
+	"create.ponder.tag.train_related.description": "用于建造或管理列车装置的组件",
 
 	"create.ponder.analog_lever.header": "使用模拟拉杆控制红石信号",
 	"create.ponder.analog_lever.text_1": "模拟拉杆可提供紧凑而精确的红石信号源",
