中文翻译：思索——单位和描述

--- a/src/main/resources/assets/create/lang/zh_cn.json
+++ b/src/main/resources/assets/create/lang/zh_cn.json
@@ -939,26 +939,26 @@
 	"create.generic.length": "长度",
 	"create.generic.speed": "速度",
 	"create.generic.delay": "延时",
-	"create.generic.duration": "UNLOCALIZED: Duration",
-	"create.generic.timeUnit": "UNLOCALIZED: Time Unit",
+	"create.generic.duration": "持续时间",
+	"create.generic.timeUnit": "时间单位",
 	"create.generic.unit.ticks": "Ticks",
 	"create.generic.unit.seconds": "秒",
 	"create.generic.unit.minutes": "分钟",
-	"create.generic.daytime.hour": "UNLOCALIZED: Hour",
-	"create.generic.daytime.minute": "UNLOCALIZED: Minute",
-	"create.generic.daytime.second": "UNLOCALIZED: Second",
-	"create.generic.daytime.pm": "UNLOCALIZED: pm",
-	"create.generic.daytime.am": "UNLOCALIZED: am",
+	"create.generic.daytime.hour": "时",
+	"create.generic.daytime.minute": "分",
+	"create.generic.daytime.second": "秒",
+	"create.generic.daytime.pm": "pm",
+	"create.generic.daytime.am": "am",
 	"create.generic.unit.rpm": "RPM",
 	"create.generic.unit.stress": "su",
 	"create.generic.unit.degrees": "°",
 	"create.generic.unit.millibuckets": "%1$smB",
-	"create.generic.unit.buckets": "UNLOCALIZED: B",
+	"create.generic.unit.buckets": "B",
 	"create.generic.clockwise": "顺时针方向",
 	"create.generic.counter_clockwise": "逆时针方向",
-	"create.generic.in_quotes": "UNLOCALIZED: \"%1$s\"",
-	"create.generic.pitch": "UNLOCALIZED: Pitch: %1$s",
-	"create.generic.notes": "UNLOCALIZED: F#;F;E;D#;D;C#;C;B;A#;A;G#;G",
+	"create.generic.in_quotes": "\"%1$s\"",
+	"create.generic.pitch": "音调：%1$s",
+	"create.generic.notes": "F#;F;E;D#;D;C#;C;B;A#;A;G#;G",
 
 	"create.action.scroll": "滚轮",
 	"create.action.confirm": "确认",
